@@ -2,23 +2,9 @@
   = hidden_field_tag "context", "#{@context}"
   = hidden_field_tag "campaign[user_id]", @current_user.id
   = f.error_messages
-  .section
-    %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
-      %tr
-        %td{ :colspan => 4, :valign => :top }
-          .label.top.req Campaign name:
-          = f.text_field :name, :style => "width:500px"
-      %tr
-        %td{ :valign => :top }
-          .label Start date:
-          = f.text_field :starts_on, :style => "width:110px", :autocomplete => :off
-        %td= spacer
-        %td{ :valign => :top }
-          .label End date:
-          = f.text_field :ends_on, :style => "width:110px", :autocomplete => :off
-        %td= spacer(260)
-  = render :partial => "campaigns/objectives", :locals => { :f => f }
-  = render :partial => "campaigns/permissions",  :locals => { :f => f }
+  = render :partial => "campaigns/top_section", :locals => { :f => f }
+  = render :partial => "campaigns/objectives",  :locals => { :f => f }
+  = render :partial => "campaigns/permissions", :locals => { :f => f }
   .buttonbar
     = f.submit "Create Campaign"
     or
