@@ -1,12 +1,0 @@
-<h1>Editing campaign</h1>
-
-<% form_for(@campaign) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @campaign %> |
-<%= link_to 'Back', campaigns_path %>
