@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Fri, Mar 6, 2008
 ---------------------------------------------------------------------
 - Implemented [Edit Account] form.
+- Implemented basic functions of [Edit Campaign].
 
 Thu, Mar 5, 2008
 ---------------------------------------------------------------------
